@@ -1,1 +1,1 @@
-enum C x;
+C x;
